test/org/midica/testfiles/failing/eff-func-param-invalid-1.midica
INCLUDE inc/instruments.midica


0: vol.line(1,9999999999999)
